--- a/style.css
+++ b/style.css
@@ -75,9 +75,19 @@ a {
     display: inline;
   }
 } 
-footer {
-  position: fixed;
-  width: 100%;
-  left: 0;
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
   bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
 }
