--- a/style.css
+++ b/style.css
@@ -91,3 +91,10 @@ a {
   width: 100%;
   height: 2.5rem;            /* Footer height */
 }
+
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
